<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vk.calculator.MainActivity">

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="211dp"
        android:text="@string/nine" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn9"
        android:layout_alignBottom="@+id/btn9"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/btn9"
        android:layout_toRightOf="@+id/btn9"
        android:text="@string/eight" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn8"
        android:layout_alignBottom="@+id/btn8"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/btn8"
        android:layout_toRightOf="@+id/btn8"
        android:text="@string/seven" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn9"
        android:layout_alignStart="@+id/btn9"
        android:layout_below="@+id/btn9"
        android:text="@string/six" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn8"
        android:layout_alignRight="@+id/btn8"
        android:layout_below="@+id/btn8"
        android:text="@string/five" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn7"
        android:layout_alignStart="@+id/btn7"
        android:layout_below="@+id/btn7"
        android:text="@string/four" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn6"
        android:layout_alignStart="@+id/btn6"
        android:layout_below="@+id/btn6"
        android:text="@string/three" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn5"
        android:layout_alignStart="@+id/btn5"
        android:layout_below="@+id/btn5"
        android:text="@string/two" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn4"
        android:layout_alignStart="@+id/btn4"
        android:layout_below="@+id/btn4"
        android:text="@string/one" />

    <Button
        android:id="@+id/btnequal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn3"
        android:layout_alignStart="@+id/btn3"
        android:layout_below="@+id/btn3"
        android:text="@string/equal" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn2"
        android:layout_alignStart="@+id/btn2"
        android:layout_below="@+id/btn2"
        android:text="@string/zero" />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn1"
        android:layout_alignRight="@+id/btn1"
        android:layout_below="@+id/btn1"
        android:text="@string/clear" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn4"
        android:layout_toEndOf="@+id/btn7"
        android:layout_toRightOf="@+id/btn7"
        android:text="@string/division" />

    <Button
        android:id="@+id/btnmul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn7"
        android:layout_toEndOf="@+id/btn4"
        android:layout_toRightOf="@+id/btn4"
        android:text="@string/multipli" />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnmul"
        android:layout_toEndOf="@+id/btn1"
        android:layout_toRightOf="@+id/btn1"
        android:text="@string/substract" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsub"
        android:layout_toEndOf="@+id/btnclear"
        android:layout_toRightOf="@+id/btnclear"
        android:text="@string/add" />

    <TextView
        android:id="@+id/tvcontrol"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/btn8"
        android:layout_alignLeft="@+id/tvresult"
        android:layout_alignStart="@+id/tvresult"
        android:layout_marginBottom="39dp" />

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/tvcontrol"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp" />
</RelativeLayout>
